# projeto-dw-dbtcore

./: README.md  pyproject.toml
src/: extract_load.py
